fixed width of stats container that was causing overflow

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ header{
     }
     .stats{
         left: 65%;
-        width: 36%;
+        width: 35%;
     }
     .games-played, .attempts, .accuracy{
            font-size: 1.2rem;
